--- a/src/pages/authentication/signin/signin.module.css
+++ b/src/pages/authentication/signin/signin.module.css
@@ -52,3 +52,14 @@
   opacity: 1;
   text-decoration: none;
 }
+
+.error {
+  width: 240px;
+  height: 18px;
+  text-align: left;
+  font: normal normal normal 10px/16px Poppins;
+  font-size: 10px;
+  letter-spacing: 0px;
+  color: #ff006c;
+  opacity: 1;
+}
