--- a/src/pages/authentication/signup/signup.module.css
+++ b/src/pages/authentication/signup/signup.module.css
@@ -1,36 +1,46 @@
 .signup {
-    width: 100%;
-    height: 100%;
-    background: url("../../../assets/authentication/signup/signup.png") no-repeat;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .form {
-    display: block;
-  }
-  
-  .form .content {
-    width: 247px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-items: center;
-  }
-  
-  .form .content .title {
-    width: 100%;
-    text-align: left;
-    margin-top: 11.5px;
-  }
-  
-  .form .content .title h3 {
-    margin: 0;
-    padding: 0;
-    font: normal normal medium 12px/16px Poppins;
-    font-size: 12px;
-    letter-spacing: 0px;
-    color: #7315be;
-    opacity: 1;
-  }
-  
+  width: 100%;
+  height: 100%;
+  background: url("../../../assets/authentication/signup/signup.png") no-repeat;
+  margin: 0;
+  padding: 0;
+}
+
+.form {
+  display: block;
+}
+
+.form .content {
+  width: 247px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+}
+
+.form .content .title {
+  width: 100%;
+  text-align: left;
+  margin-top: 11.5px;
+}
+
+.form .content .title h3 {
+  margin: 0;
+  padding: 0;
+  font: normal normal medium 12px/16px Poppins;
+  font-size: 12px;
+  letter-spacing: 0px;
+  color: #7315be;
+  opacity: 1;
+}
+
+.error {
+  width: 240px;
+  height: 18px;
+  text-align: left;
+  font: normal normal normal 10px/16px Poppins;
+  font-size: 10px;
+  letter-spacing: 0px;
+  color: #ff006c;
+  opacity: 1;
+}
