--- a/src/styles/margins.css
+++ b/src/styles/margins.css
@@ -2,6 +2,26 @@
   margin: 0;
 }
 
+.m-4 {
+  margin: 4px;
+}
+
+.mt-4 {
+  margin-top: 4px;
+}
+
+.mb-4 {
+  margin-bottom: 4px;
+}
+
+.mr-4 {
+  margin-right: 4px;
+}
+
+.ml-4 {
+  margin-left: 4px;
+}
+
 .m-8 {
   margin: 8px;
 }
