Auth process complete

--- a/src/styles/margins.css
+++ b/src/styles/margins.css
@@ -121,3 +121,23 @@
 .ml-32 {
   margin-left: 32px;
 }
+
+.m-49 {
+  margin: 49px;
+}
+
+.mt-49 {
+  margin-top: 49px;
+}
+
+.mb-49 {
+  margin-bottom: 49px;
+}
+
+.mr-49 {
+  margin-right: 49px;
+}
+
+.ml-49 {
+  margin-left: 49px;
+}
